--- a/PWD/day2.html
+++ b/PWD/day2.html
@@ -34,6 +34,65 @@
 
     <p>H<sub>2</sub>O</p>
     <p>a<sup>2</sup> + b <sup>2</sup></p>
+
+    <pre>
+        Welcome
+                To
+                    HTML
+    </pre>
+
+    <ul>
+        <li>CPISM</li>
+        <ul>
+            <li>OFFICE</li>
+            <li>PWD</li>
+            <ul>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JS</li>
+            </ul>
+        </ul>
+        <li>DISM</li>
+        <li>HDSE-I</li>
+        <li>HDSE-II</li>
+        <li>ADSE-I</li>
+        <li>ADSE-II</li>
+    </ul>
+
+    <ol style="list-style-type: upper-alpha;">
+        <li>CPISM</li>
+        <ol>
+            <li>OFFICE</li>
+            <li>PWD</li>
+            <ol>
+                <li>HTML</li>
+                <li>CSS</li>
+                <li>JS</li>
+            </ol>
+        </ol>
+        <li>DISM</li>
+        <li>HDSE-I</li>
+        <li>HDSE-II</li>
+        <li>ADSE-I</li>
+        <li>ADSE-II</li>
+    </ol>
+
+
+
+    <dl>
+        <dt>What is HTML</dt>
+        <dd>
+            HTML is a Markup Language for describing the structure of website.
+        </dd>
+    </dl>
+
+    <h1>ANCHOR</h1>
+
+    <h3>Absolute Path</h3>
+    <p>Visit my Website -- <a target="_blank" href="https://aptech-education.com.pk/">Aptech</a> </p>
+
+    <h3>Relative Path</h3>
+    <p>Go to Page 1 <a href="day1.html">Page 1</a> </p>
     
 </body>
 </html>
