PWD day 8 - CSS day 3

--- a/PWD/CSS/day2.html
+++ b/PWD/CSS/day2.html
@@ -103,7 +103,7 @@
             letter-spacing: 15px;
             font-weight: bold;
             font-style: italic;
-            font-size: 30px;
+            font-size: 3git push0px;
             font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
         }
 
