PWD day 15 - CSS day 10

--- a/PWD/CSS/project(day5onwards)/about.html
+++ b/PWD/CSS/project(day5onwards)/about.html
@@ -155,6 +155,7 @@
         <a href="home.html">HOME</a>
         <a href="about.html" style="color: black;">ABOUT</a>
         <a href="services.html">SERVICES</a>
+        <a href="grid.html">GRID</a>
         <a href="contact.html">CONTACT</a>
 
         <input type="text">
