--- a/PWD/CSS/project(day5onwards)/home.html
+++ b/PWD/CSS/project(day5onwards)/home.html
@@ -1,26 +1,35 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Document</title>
     <link rel="stylesheet" href="navbarstyle.css">
 </head>
+
 <body>
     <nav>
-        <img src="aptech.png" alt="">
+        <div>
+            <img src="ecommerce.jpg" alt="">
+        </div>
 
-<a href="home.html" style="color: black;">HOME</a>
-        <a href="about.html">ABOUT</a>
-        <a href="services.html">SERVICES</a>
-        <a href="contact.html">CONTACT</a>
+        <div>
+            <a href="home.html" style="color: black;">HOME</a>
+            <a href="about.html">ABOUT</a>
+            <a href="services.html">SERVICES</a>
+            <a href="grid.html">GRID</a>
+            <a href="contact.html">CONTACT</a>
+        </div>
 
-        <input type="text">
-        <button>Search</button>
+        <div>
+            <input type="text">
+            <button>Search</button>
+        </div>
     </nav>
 
-    <div>
-        <img src="nature.jpg" alt="">
+    <div class="banner">
+        <img src="ecommerceBanner.jpg" alt="">
     </div>
 
     <h1>Our Products</h1>
@@ -91,23 +100,24 @@
             <a href="https://www.instagram.com/" target="_blank"><img src="instagram.jfif" alt=""></a>
             <a href="https://www.youtube.com/" target="_blank"><img src="youtube.png" alt=""></a>
             <a href="https://www.x.com/" target="_blank"><img src="x.png" alt=""></a>
-        </div>  
+        </div>
 
         <div>
-        <a href="home.html">HOME</a>
-        <a href="about.html">ABOUT</a>
-        <a href="services.html">SERVICES</a>
-        <a href="contact.html">CONTACT</a>
+            <a href="home.html">HOME</a>
+            <a href="about.html">ABOUT</a>
+            <a href="services.html">SERVICES</a>
+            <a href="contact.html">CONTACT</a>
         </div>
 
 
         <div>
             <form action="">
-            <input type="text" placeholder="abc@gmail.com" required>
-            <button type="submit" style="margin: 5px; display: inline;">Subscribe</button>
-        </form>
+                <input type="text" placeholder="abc@gmail.com" required>
+                <button type="submit" style="margin: 5px; display: inline;">Subscribe</button>
+            </form>
         </div>
     </footer>
-    
+
 </body>
+
 </html>
