--- a/PWD/CSS/project(day5onwards)/services.html
+++ b/PWD/CSS/project(day5onwards)/services.html
@@ -80,6 +80,7 @@
         <a href="home.html">HOME</a>
         <a href="about.html">ABOUT</a>
         <a href="services.html">SERVICES</a>
+        <a href="grid.html">GRID</a>
         <a href="contact.html">CONTACT</a>
         </div>
 
