PWD day 23 - JS day 9

--- a/PWD/JS/index.html
+++ b/PWD/JS/index.html
@@ -14,5 +14,30 @@
         // document.write("Faraz Inam");
         // document.write('Faraz Inam');
      </script>
+
+     <button onclick="alert('You Clicked!')">Alert!</button>
+     <button onclick='console.log("You Clicked!")'>Console!</button>  
+     <button onclick="e()">Alert With Function!</button>
+     <!-- <button onclick='document.write("You Clicked!")'>Document!</button> -->
+
+
+     <button ondblclick='alert("You Clicked Double!")'>Alert Double!</button>
+<br>
+     <button onmouseover="o()">Mouse Over Here</button>
+
+     <button onmouseover="over()" onmouseout="out()">Mouse Over and Out Here</button>
+<br>
+     <button onkeydown="down()" onkeyup="up()">Key Press</button>
+
+     <button onclick="alls()"> working </button>
+
+     <hr>
+
+     <h1>DOM</h1>
+
+     <input type="text" id="inp1">
+     <p id="para1"></p>
+     <button onclick="abc()"> submit </button>
+
 </body>
 </html>
