--- a/PWD/JS/index.html
+++ b/PWD/JS/index.html
@@ -39,5 +39,17 @@
      <p id="para1"></p>
      <button onclick="abc()"> submit </button>
 
+     <p id="para2">This is a paragraph 2</p>
+     <p id="para3">This is a paragraph 3</p>
+
+
+     <!-- <script>
+          let msg = "Text Changes!";
+document.getElementById('para2').innerText = msg;
+document.getElementById('para3').innerText = msg;
+     </script> -->
+
+     
+
 </body>
 </html>
