--- a/JQuery/day1.html
+++ b/JQuery/day1.html
@@ -20,10 +20,10 @@
         console.log(data);
 
         //using jQuery
-        // $(document).ready(function(){
-        //     var data2 = $('#abc').html();
-        //     console.log(data2);
-        // })
+        $(document).ready(function(){
+            var data2 = $('.p3').html();
+            console.log(data2);
+        })
 
         $(function(){
             var data1 = $('p').html();
@@ -34,6 +34,7 @@
             console.log(data2);
             console.log(data3);
         })
+
         
     </script>
     
